--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Main</title>
   </head>
   <body>
@@ -25,9 +29,9 @@
 
     <nav class="nav-box">
       <div><a href="mypr.html"> 自己紹介</a></div>
-      <div><a href=""> jiwon's展覧会</a></div>
+      <div><a href="art.html"> jiwon's作品展示</a></div>
       <div><a href=""> 趣味</a></div>
-      <div><a href=""> ext.</a></div>
+      <div><a href="exclude.html"> その他のWEB作品</a></div>
     </nav>
   </body>
 </html>
