--- a/mypr.html
+++ b/mypr.html
@@ -5,11 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>sample</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <title>自己紹介</title>
   </head>
   <body>
-    <article>
-      <div class="blow"></div>
-    </article>
+    <header class="head-name">
+      <div class="head-name_box">
+        <h1>park jiwon's portfolio</h1>
+        <h2><a href="index.html">MAIN PAGE</a></h2>
+      </div>
+    </header>
+
+    <section class="pr-title">
+      <div id="first-name">自己紹介</div>
+      <div><a href="art.html">jiwon's作品展示</a></div>
+      <div><a href="hobby.html">趣味</a></div>
+      <div><a href="exclude.html">その他のWEB作品</a></div>
+    </section>
+
+    <main class="pr-list">
+      <div>
+        <img src="" alt="" />
+      </div>
+      <section class="pr-list_box">
+        <span> 九州情報大学</span>
+        <span>経営情報学部</span>
+        <span>情報ネットワーク学科　3年生</span>
+        <span>名前：朴芝媛(パクジウォン) </span>
+        <span>年齢：23歳</span>
+        <span>出身国：韓国のブサン </span>
+      </section>
+    </main>
+
+    <section class="my-memory">
+      <div class="pakit">
+        <h1>韓国での追憶</h1>
+      </div>
+      <div class="korea-img">
+        <span
+          ><img src="img/flowe.JPG" alt="" />
+          <h2>花見</h2></span
+        >
+        <span
+          ><img src="img/sea.jpg" alt="" />
+          <h2>年末パーティー</h2></span
+        >
+        <span
+          ><img src="img/danche.JPG" alt="" />
+          <h2>友情写真</h2></span
+        >
+        <span
+          ><img src="img/chirs.JPG" alt="" />
+          <h2>クリスマス</h2></span
+        >
+      </div>
+    </section>
+    <section class="my-memory">
+      <div class="pakit">
+        <h1>日本での追憶</h1>
+      </div>
+      <div class="korea-img">
+        <span
+          ><img src="img/family.JPG" alt="" />
+          <h2>家族旅行</h2></span
+        >
+        <span
+          ><img src="img/nup.JPG" alt="" />
+          <h2>島根旅行</h2></span
+        >
+        <span
+          ><img src="img/kanmonsai.JPG" alt="" />
+          <h2>華門祭</h2></span
+        >
+        <span
+          ><img src="img/tenmangu.jpg" alt="" />
+          <h2>初もうで</h2></span
+        >
+      </div>
+    </section>
   </body>
 </html>
