--- a/exclude.html
+++ b/exclude.html
@@ -32,19 +32,19 @@
       </div>
       <div class="korea-img">
         <span
-          ><img src="img/webpro.JPG" alt="" />
+          ><img src="img/webpro.JPG" />
           <h2>1</h2></span
         >
         <span
-          ><img src="img/kakao.JPG" alt="" />
+          ><img src="img/kakao.JPG" />
           <h2>2</h2></span
         >
         <span
-          ><img src="img/momen.JPG" alt="" />
+          ><img src="img/momen.JPG" />
           <h2>3</h2></span
         >
         <span
-          ><img src="img/kyu.JPG" alt="" />
+          ><img src="img/kyu.JPG" />
           <h2>4</h2></span
         >
       </div>
