--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav class="nav-box">
       <div><a href="mypr.html"> 自己紹介</a></div>
       <div><a href="art.html"> jiwon's作品展示</a></div>
-      <div><a href=""> 趣味</a></div>
+      <div><a href="hobby.html"> 趣味</a></div>
       <div><a href="exclude.html"> その他のWEB作品</a></div>
     </nav>
   </body>
