--- a/exclude.html
+++ b/exclude.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>趣味</title>
+    <title>その他のWEB作品</title>
   </head>
   <body>
     <header class="head-name">
@@ -23,32 +23,42 @@
       <div><a href="mypr.html">自己紹介</a></div>
       <div><a href="art.html">jiwon's作品展示</a></div>
       <div><a href="hobby.html">趣味</a></div>
+      <div><a href="mim.html">私とインタビュー</a></div>
       <div id="first-name"><a href="exclude.html">その他のWEB作品</a></div>
     </section>
 
-    <section class="my-memory">
-      <div class="pakit">
-        <h1>作った料理</h1>
-      </div>
-      <div class="korea-img">
-        <span
-          ><img src="img/webpro.JPG" />
-          <h2>1</h2></span
-        >
-        <span
-          ><img src="img/kakao.JPG" />
-          <h2>2</h2></span
-        >
-        <span
-          ><img src="img/momen.JPG" />
-          <h2>3</h2></span
-        >
-        <span
-          ><img src="img/kyu.JPG" />
-          <h2>4</h2></span
-        >
-      </div>
-    </section>
+    <main>
+      <section class="all-work">
+        <div class="all-work_list">
+          <div>
+            <a
+              href="https://pingpong5252.github.io/WEB_PROGRAMING/"
+              target="_blank"
+              ><img src="img/webpro.JPG"
+            /></a>
+          </div>
+          <div>
+            <a
+              href="https://pingpong5252.github.io/kokoa-clone-2020/"
+              target="_blank"
+              ><img src="img/kakao.JPG"
+            /></a>
+          </div>
+          <div>
+            <a
+              href="https://pingpong5252.github.io/momentum_2021/"
+              target="_blank"
+              ><img src="img/momen.JPG"
+            /></a>
+          </div>
+          <div>
+            <a href="https://pingpong5252.github.io/WEB_CLUB/" target="_blank"
+              ><img src="img/kyu.JPG"
+            /></a>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <main class="pr-list">
       <section class="explain">
