--- a/hobby.html
+++ b/hobby.html
@@ -23,6 +23,7 @@
       <div><a href="mypr.html">自己紹介</a></div>
       <div><a href="art.html">jiwon's作品展示</a></div>
       <div id="first-name"><a href="hobby.html">趣味</a></div>
+      <div><a href="mim.html">私とインタビュー</a></div>
       <div><a href="exclude.html">その他のWEB作品</a></div>
     </section>
 
