--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>Main</title>
+    <title>JIWON's portfolio</title>
   </head>
   <body>
     <header class="title">
@@ -31,6 +31,7 @@
       <div><a href="mypr.html"> 自己紹介</a></div>
       <div><a href="art.html"> jiwon's作品展示</a></div>
       <div><a href="hobby.html"> 趣味</a></div>
+      <div><a href="mim.html"> 私とインタビュー</a></div>
       <div><a href="exclude.html"> その他のWEB作品</a></div>
     </nav>
   </body>
