--- a/mypr.html
+++ b/mypr.html
@@ -23,6 +23,7 @@
       <div id="first-name">自己紹介</div>
       <div><a href="art.html">jiwon's作品展示</a></div>
       <div><a href="hobby.html">趣味</a></div>
+      <div><a href="mim.html">韓国ミーム</a></div>
       <div><a href="exclude.html">その他のWEB作品</a></div>
     </section>
 
@@ -35,11 +36,33 @@
         <span>経営情報学部</span>
         <span>情報ネットワーク学科　3年生</span>
         <span>名前：朴芝媛(パクジウォン) </span>
-        <span>年齢：23歳</span>
+        <span>年齢：23歳(1998.12.11)</span>
         <span>出身国：韓国のブサン </span>
       </section>
     </main>
 
+    <main class="pr-other">
+      <section class="pr-other_list">
+        <span></span>
+        <span class="my-face"> <img src="img/mehaha.JPG" alt="" /> </span>
+        <div class="my-like">
+          <h2>好きな映画:ワイルドスピード、ヒロイン失格、オトナ帝国の逆襲</h2>
+          <h2>好きなアニメ:黒執事、範馬刃牙</h2>
+          <h2>好きな本:1Q84,論語</h2>
+        </div>
+      </section>
+    </main>
+
+    <main class="pr-list">
+      <section class="explain">
+        <span>
+          初めまして朴芝媛と申します。フロントエンドエンジニアを向けて勉強しています。
+          使える言語はHTML,CSSでJAVASCRIPTも練習しています。私のモットーは‘真面目に仕事に取り組んだ
+          人が休みの楽しさを分かる’ということです。楽しく休みたいなら真面目に仕事すべきだと思っており、
+          何事でも熱心に取り組んでいます。
+        </span>
+      </section>
+    </main>
     <section class="my-memory">
       <div class="pakit">
         <h1>韓国での追憶</h1>
@@ -51,15 +74,15 @@
         >
         <span
           ><img src="img/sea.jpg" alt="" />
-          <h2>年末パーティー</h2></span
+          <h2>2020年年末</h2></span
         >
         <span
           ><img src="img/danche.JPG" alt="" />
           <h2>友情写真</h2></span
         >
         <span
-          ><img src="img/chirs.JPG" alt="" />
-          <h2>クリスマス</h2></span
+          ><img src="img/sea2.JPG" alt="" />
+          <h2>夏の海</h2></span
         >
       </div>
     </section>
@@ -69,8 +92,8 @@
       </div>
       <div class="korea-img">
         <span
-          ><img src="img/family.JPG" alt="" />
-          <h2>家族旅行</h2></span
+          ><img src="img/grade.JPG" alt="" />
+          <h2>卒業式</h2></span
         >
         <span
           ><img src="img/nup.JPG" alt="" />
