--- a/mim.html
+++ b/mim.html
@@ -27,20 +27,186 @@
       <div><a href="exclude.html">その他のWEB作品</a></div>
     </section>
 
+    <article class="come-contain">
+      <div class="come-in">
+        <span><h1>ウットさんが参加しました</h1></span>
+        <span><h1>ジウォンさんが参加しました</h1></span>
+      </div>
+    </article>
+
     <main class="to-me_all">
       <section class="to-me">
         <div class="to-me_list">
-          <span>1 <img src="" alt="" /> </span>
-          <span class="to-me_span">HELLO</span>
+          <span><img src="img/otto.jpg" alt="" /> </span>
+          <span class="to-me_span"><h2>こんにちは！</h2></span>
         </div>
       </section>
 
       <section class="to-me_own">
         <div class="to-me_list-own">
-          <span class="to-me_span-own">HELLO</span>
-          <span>2 <img src="" alt="" /> </span>
+          <span class="to-me_span-own"><h2>こんにちは～！</h2></span>
+          <span> <img src="img/me.JPG" alt="" /> </span>
+        </div>
+      </section>
+
+      <section class="to-me">
+        <div class="to-me_list">
+          <span><img src="img/otto.jpg" alt="" /> </span>
+          <span class="to-me_span"
+            ><h2>今日, 貴重な時間ありがとうございます。</h2></span
+          >
+        </div>
+      </section>
+
+      <section class="to-me">
+        <div class="to-me_list">
+          <span><img src="img/otto.jpg" alt="" /> </span>
+          <span class="to-me_span"
+            ><h2>
+              早速に簡単なご質問ですが、自分の強みは何だとおもいますか？？
+            </h2></span
+          >
+        </div>
+      </section>
+      <section class="to-me_own">
+        <div class="to-me_list-own">
+          <span class="to-me_span-own"
+            ><h2>
+              普通に1週間づつの予定をプランを作っており、日程をよくチェックしています
+              。
+            </h2></span
+          >
+          <span> <img src="img/me.JPG" alt="" /> </span>
+        </div>
+      </section>
+
+      <section class="to-me_own">
+        <div class="to-me_list-own">
+          <span class="to-me_span-own"
+            ><h2>
+              WEBを作る時もどんなコンテンツ、デザインをするかを簡単に
+              ワイヤーフレームを描いて作品を作っています。
+            </h2></span
+          >
+          <span> <img src="img/me.JPG" alt="" /> </span>
+        </div>
+      </section>
+
+      <section class="to-me">
+        <div class="to-me_list">
+          <span><img src="img/otto.jpg" alt="" /> </span>
+          <span class="to-me_span"
+            ><h2>
+              はい、ありがとうございます。次に、今のWEBはなぜこうに作るようになりましたか？
+            </h2></span
+          >
+        </div>
+      </section>
+
+      <section class="to-me_own">
+        <div class="to-me_list-own">
+          <span class="to-me_span-own"
+            ><h2>
+              うんん、、そうですね、、ポートフォリオは自分に関して作ることだから、
+            </h2></span
+          >
+          <span> <img src="img/me.JPG" alt="" /> </span>
+        </div>
+      </section>
+
+      <section class="to-me_own">
+        <div class="to-me_list-own">
+          <span class="to-me_span-own"
+            ><h2>
+              自分に関することを畑の作物だと思って畑のようなコンテンツで制作してみました。
+            </h2></span
+          >
+          <span> <img src="img/me.JPG" alt="" /> </span>
+        </div>
+      </section>
+
+      <section class="to-me">
+        <div class="to-me_list">
+          <span><img src="img/otto.jpg" alt="" /> </span>
+          <span class="to-me_span"
+            ><h2>へええ、そうですね、とてもｶﾜ(・∀・)ｲｲ!!です～</h2></span
+          >
+        </div>
+      </section>
+
+      <section class="to-me_own">
+        <div class="to-me_list-own">
+          <span class="to-me_span-own"><h2>あざす～</h2></span>
+          <span> <img src="img/me.JPG" alt="" /> </span>
+        </div>
+      </section>
+
+      <section class="to-me">
+        <div class="to-me_list">
+          <span><img src="img/otto.jpg" alt="" /> </span>
+          <span class="to-me_span"
+            ><h2>最後で、今日のインタビューの感想お願いしますー！</h2></span
+          >
+        </div>
+      </section>
+
+      <section class="to-me_own">
+        <div class="to-me_list-own">
+          <span class="to-me_span-own"
+            ><h2>
+              はい、今日、短い時間でしたが、今日の質問を考えて見てもっと
+              自分を分析してみた機会になった時間だと思いました。
+            </h2></span
+          >
+          <span> <img src="img/me.JPG" alt="" /> </span>
+        </div>
+      </section>
+
+      <section class="to-me_own">
+        <div class="to-me_list-own">
+          <span class="to-me_span-own"
+            ><h2>今日、貴重な時間頂いてありがとうございました！！</h2></span
+          >
+          <span> <img src="img/me.JPG" alt="" /> </span>
+        </div>
+      </section>
+
+      <section class="to-me">
+        <div class="to-me_list">
+          <span><img src="img/otto.jpg" alt="" /> </span>
+          <span class="to-me_span"
+            ><h2>
+              へえ、そうに思ってくれてありがとうございます！
+              こちらこそ、お忙しいところ、貴重な時間ありがとうございました！！
+            </h2></span
+          >
+        </div>
+      </section>
+
+      <section class="to-me">
+        <div class="to-me_list">
+          <span><img src="img/otto.jpg" alt="" /> </span>
+          <span class="to-me_span"
+            ><h2>これで、インタビューを終了します、お疲れ様です～。</h2></span
+          >
+        </div>
+      </section>
+
+      <section class="to-me_own">
+        <div class="to-me_list-own">
+          <span class="to-me_span-own"
+            ><h2>ありがとうございました( ´∀｀ )！お疲れ様です～。</h2></span
+          >
+          <span> <img src="img/me.JPG" alt="" /> </span>
         </div>
       </section>
     </main>
+
+    <article class="come-contain">
+      <div class="come-in">
+        <span><h1>ジウォンさんが退場しました</h1></span>
+        <span><h1>ウットさんが退場しました</h1></span>
+      </div>
+    </article>
   </body>
 </html>
