--- a/mypr.html
+++ b/mypr.html
@@ -23,7 +23,7 @@
       <div id="first-name">自己紹介</div>
       <div><a href="art.html">jiwon's作品展示</a></div>
       <div><a href="hobby.html">趣味</a></div>
-      <div><a href="mim.html">韓国ミーム</a></div>
+      <div><a href="mim.html">私とインタビュー</a></div>
       <div><a href="exclude.html">その他のWEB作品</a></div>
     </section>
 
