--- a/mim.html
+++ b/mim.html
@@ -68,6 +68,15 @@
           >
         </div>
       </section>
+
+      <section class="to-me_own">
+        <div class="to-me_list-own">
+          <span class="to-me_span-own"
+            ><h2>何ことでも計画性を持って進めることだと思います！</h2></span
+          >
+          <span> <img src="img/me.JPG" alt="" /> </span>
+        </div>
+      </section>
       <section class="to-me_own">
         <div class="to-me_list-own">
           <span class="to-me_span-own"
