--- a/mim.html
+++ b/mim.html
@@ -72,7 +72,7 @@
       <section class="to-me_own">
         <div class="to-me_list-own">
           <span class="to-me_span-own"
-            ><h2>何ことでも計画性を持って進めることだと思います！</h2></span
+            ><h2>何ことでも計画性を持って進めることだと思います❕</h2></span
           >
           <span> <img src="img/me.JPG" alt="" /> </span>
         </div>
