--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div>
         <h1>park jiwon's</h1>
         <h1>portfolio</h1>
+        <i class="fa-solid fa-mushroom"></i>
       </div>
     </header>
 
@@ -34,5 +35,10 @@
       <div><a href="mim.html"> 私とインタビュー</a></div>
       <div><a href="exclude.html"> その他のWEB作品</a></div>
     </nav>
+
+    <script
+      src="https://kit.fontawesome.com/ae117ec70d.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
