--- a/sss.html
+++ b/sss.html
@@ -1,23 +1,12 @@
-<section class="my-memory">
-  <div class="pakit">
-    <h1>作った料理</h1>
-  </div>
-  <div class="korea-img">
-    <span
-      ><img src="img/webpro.JPG" />
-      <h2>1</h2></span
-    >
-    <span
-      ><img src="img/kakao.JPG" />
-      <h2>2</h2></span
-    >
-    <span
-      ><img src="img/momen.JPG" />
-      <h2>3</h2></span
-    >
-    <span
-      ><img src="img/kyu.JPG" />
-      <h2>4</h2></span
-    >
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <i class="fa-regular fa-mushroom">2</i>
+  </body>
+</html>
